Added tests for MovieService. Changed on MovieService. Changes on Role/Review models. Removed migrations,

--- a/Squids-Movies-App/SquidsMovieApp.Data/SquidsMovieApp.Data.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Data/SquidsMovieApp.Data.csproj
@@ -56,41 +56,9 @@
     <Compile Include="Common\Class1.cs" />
     <Compile Include="Context\IMovieAppDBContext.cs" />
     <Compile Include="Context\MovieAppDBContext.cs" />
-    <Compile Include="Migrations\201803151523146_Initial.cs" />
-    <Compile Include="Migrations\201803151523146_Initial.Designer.cs">
-      <DependentUpon>201803151523146_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201803191147108_MoviesTableAddedRatedAndPoster.cs" />
-    <Compile Include="Migrations\201803191147108_MoviesTableAddedRatedAndPoster.Designer.cs">
-      <DependentUpon>201803191147108_MoviesTableAddedRatedAndPoster.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201803201255285_RoleAndMovieChanged.cs" />
-    <Compile Include="Migrations\201803201255285_RoleAndMovieChanged.Designer.cs">
-      <DependentUpon>201803201255285_RoleAndMovieChanged.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201803201259490_RoleAndMovieChangedx2.cs" />
-    <Compile Include="Migrations\201803201259490_RoleAndMovieChangedx2.Designer.cs">
-      <DependentUpon>201803201259490_RoleAndMovieChangedx2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201803201306256_RemovedRolesFromParticipants.cs" />
-    <Compile Include="Migrations\201803201306256_RemovedRolesFromParticipants.Designer.cs">
-      <DependentUpon>201803201306256_RemovedRolesFromParticipants.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201803202303500_UpdatedParticipantAndMovie.cs" />
-    <Compile Include="Migrations\201803202303500_UpdatedParticipantAndMovie.Designer.cs">
-      <DependentUpon>201803202303500_UpdatedParticipantAndMovie.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201803202304251_MovieToMoviePoster.cs" />
-    <Compile Include="Migrations\201803202304251_MovieToMoviePoster.Designer.cs">
-      <DependentUpon>201803202304251_MovieToMoviePoster.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201803221322142_Changes.cs" />
-    <Compile Include="Migrations\201803221322142_Changes.Designer.cs">
-      <DependentUpon>201803221322142_Changes.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201803221346031_FixedMovieRestrictions.cs" />
-    <Compile Include="Migrations\201803221346031_FixedMovieRestrictions.Designer.cs">
-      <DependentUpon>201803221346031_FixedMovieRestrictions.cs</DependentUpon>
+    <Compile Include="Migrations\201803241048347_Initial..sorry.cs" />
+    <Compile Include="Migrations\201803241048347_Initial..sorry.Designer.cs">
+      <DependentUpon>201803241048347_Initial..sorry.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -105,35 +73,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201803151523146_Initial.resx">
-      <DependentUpon>201803151523146_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201803191147108_MoviesTableAddedRatedAndPoster.resx">
-      <DependentUpon>201803191147108_MoviesTableAddedRatedAndPoster.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201803201255285_RoleAndMovieChanged.resx">
-      <DependentUpon>201803201255285_RoleAndMovieChanged.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201803201259490_RoleAndMovieChangedx2.resx">
-      <DependentUpon>201803201259490_RoleAndMovieChangedx2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201803201306256_RemovedRolesFromParticipants.resx">
-      <DependentUpon>201803201306256_RemovedRolesFromParticipants.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201803202303500_UpdatedParticipantAndMovie.resx">
-      <DependentUpon>201803202303500_UpdatedParticipantAndMovie.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201803202304251_MovieToMoviePoster.resx">
-      <DependentUpon>201803202304251_MovieToMoviePoster.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201803221322142_Changes.resx">
-      <DependentUpon>201803221322142_Changes.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201803221346031_FixedMovieRestrictions.resx">
-      <DependentUpon>201803221346031_FixedMovieRestrictions.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\SquidsMovieApp.Models\SquidsMovieApp.Models.csproj">
       <Project>{2EDD6303-C743-43FD-AD01-19F623ABDF5A}</Project>
       <Name>SquidsMovieApp.Models</Name>
@@ -141,6 +80,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Utilies\JsonData\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201803241048347_Initial..sorry.resx">
+      <DependentUpon>201803241048347_Initial..sorry.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
