--- a/Squids-Movies-App/SquidsMovieApp.Common/SquidsMovieApp.Common.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Common/SquidsMovieApp.Common.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutomapperConfiguration.cs" />
+    <Compile Include="Constants\GlobalConstants.cs" />
     <Compile Include="Mapping\IHaveCustomMapping.cs" />
     <Compile Include="Mapping\IMapFrom.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
