--- a/Squids-Movies-App/SquidsMovieApp.Models/SquidsMovieApp.Models.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Models/SquidsMovieApp.Models.csproj
@@ -60,5 +60,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SquidsMovieApp.Common\SquidsMovieApp.Common.csproj">
+      <Project>{46BB2366-5C29-4CBC-AC99-E794310C942B}</Project>
+      <Name>SquidsMovieApp.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
