--- a/Squids-Movies-App/SquidsMovieApp.Models/SquidsMovieApp.Models.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Models/SquidsMovieApp.Models.csproj
@@ -47,13 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Genre.cs" />
-    <Compile Include="Models\Movie.cs" />
-    <Compile Include="Models\MoviePoster.cs" />
-    <Compile Include="Models\Participant.cs" />
-    <Compile Include="Models\Review.cs" />
-    <Compile Include="Models\Role.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Genre.cs" />
+    <Compile Include="Movie.cs" />
+    <Compile Include="MoviePoster.cs" />
+    <Compile Include="Participant.cs" />
+    <Compile Include="Review.cs" />
+    <Compile Include="Role.cs" />
+    <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
