Adding money to account now working; Fixed money not saving to DB;

--- a/Squids-Movies-App/SquidsMovieApp.WPF/SquidsMovieApp.WPF.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/SquidsMovieApp.WPF.csproj
@@ -77,6 +77,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AddMoneyToAccountWindow.xaml.cs">
+      <DependentUpon>AddMoneyToAccountWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AutofacModules\AutofacModule.cs" />
     <Compile Include="Controllers\Contracts\IMainController.cs" />
     <Compile Include="Controllers\MainController.cs" />
@@ -84,6 +87,7 @@
     <Compile Include="Controllers\ParticipantController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="ErrorDialog.cs" />
     <Compile Include="ErrorWindow.xaml.cs">
       <DependentUpon>ErrorWindow.xaml</DependentUpon>
     </Compile>
@@ -96,6 +100,10 @@
     <Compile Include="RegisterPage.xaml.cs">
       <DependentUpon>RegisterPage.xaml</DependentUpon>
     </Compile>
+    <Page Include="AddMoneyToAccountWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ErrorWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
