work on MovieControllerTests

--- a/Squids-Movies-App/SquidsMovieApp.DTO/SquidsMovieApp.DTO.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.DTO/SquidsMovieApp.DTO.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IMovieModel.cs" />
+    <Compile Include="Contracts\IParticipantModel.cs" />
     <Compile Include="MovieModel.cs" />
     <Compile Include="ParticipantModel.cs" />
     <Compile Include="MoviePosterModel.cs" />
