--- a/Squids-Movies-App/SquidsMovieApp.WPF/packages.config
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/packages.config
@@ -5,4 +5,5 @@
   <package id="Bytes2you.Validation" version="2.0.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net461" />
+  <package id="iTextSharp" version="5.5.13" targetFramework="net461" />
 </packages>
