Added GenreModel DTO; Added more search functionality to movie controller

--- a/Squids-Movies-App/SquidsMovieApp.DTO/SquidsMovieApp.DTO.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.DTO/SquidsMovieApp.DTO.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Contracts\IMovieModel.cs" />
     <Compile Include="Contracts\IParticipantModel.cs" />
+    <Compile Include="GenreModel.cs" />
     <Compile Include="MovieModel.cs" />
     <Compile Include="ParticipantModel.cs" />
     <Compile Include="MoviePosterModel.cs" />
