--- a/Squids-Movies-App/SquidsMovieApp.DTO/SquidsMovieApp.DTO.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.DTO/SquidsMovieApp.DTO.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenreModel.cs" />
     <Compile Include="MovieModel.cs" />
     <Compile Include="ParticipantModel.cs" />
     <Compile Include="MoviePosterModel.cs" />
