--- a/Squids-Movies-App/SquidsMovieApp.WPF/SquidsMovieApp.WPF.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/SquidsMovieApp.WPF.csproj
@@ -84,6 +84,9 @@
       <DependentUpon>AddMoneyToAccountWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="AutofacModules\AutofacModule.cs" />
+    <Compile Include="CartWindow.xaml.cs">
+      <DependentUpon>CartWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\Contracts\IMainController.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\MovieController.cs" />
@@ -112,6 +115,10 @@
     </Compile>
     <Compile Include="UserContext.cs" />
     <Page Include="AddMoneyToAccountWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CartWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
